change email and company example

--- a/_content/index.html
+++ b/_content/index.html
@@ -172,7 +172,7 @@ canvas {
                                         <label class="form-control">Your Name</label>
                                     </div>
                                     <div class="card-control">
-                                        <input class='form-control' type="text" name="name" placeholder="Elliot Alderson" />
+                                        <input class='form-control' type="text" name="name" placeholder="Kiki Ogino" />
                                     </div>
                                 </div>
                                 <div class="card-formrow">
@@ -180,7 +180,7 @@ canvas {
                                         <label class="form-control">Your Email</label>
                                     </div>
                                     <div class="card-control">
-                                        <input class='form-control' type="text" name="email" placeholder="elliot@evilcorp.io" />
+                                        <input class='form-control' type="text" name="email" placeholder="kiki@breadshop.com" />
                                     </div>
                                 </div>
                                 <div class="card-formrow">
@@ -188,7 +188,7 @@ canvas {
                                         <label class="form-control">Your Company</label>
                                     </div>
                                     <div class="card-control">
-                                        <input class='form-control' type="text" name="company" placeholder="Evil Corp" />
+                                        <input class='form-control' type="text" name="company" placeholder="Bread Shop" />
                                     </div>
                                 </div>
                                 <div class="card-formrow">
