--- a/_content/index.html
+++ b/_content/index.html
@@ -126,17 +126,17 @@ canvas {
 					<div class="text-contain">
 						<center><h3 id="about" class="h2">What to Expect</h3></center>
 						<p>
-                            <h4>Prequisite:</h4>
+                            <h4>Before you begin:</h4>
                                 <li> Webinar for SQL Foundations and Bash/Git/Version Control</li>
                                 <li> Meet with an instructor for 15min to discuss your goals</li>
-                                <li> Detailed set-up instrructions</li>
+                                <li> Detailed set-up instructions</li>
                             <h4>During:</h4>
                                 <li> A two-day course, taught by three instructors from Fishtown Analytics 👋 </li>
                                 <li> What is dbt and how does it fit into the analytics ecosystem? </li>
                                 <li> dbt fundamentals, including building and testing data models, snapshotting slowly changing dimensions, environment management, and deploying dbt projects to production</li>
                                 <li> Data warehouse design: how we practice Kimball-style modeling in dbt </li>
                                 <li> Documenting your warehouse with dbt Docs</li>
-                                <li> Utilizing dbt Source to check for data freshness</li>
+                                <li> Utilizing dbt to alert on data quality and recency issues</li>
                                 <li> Using dbt’s package management to federate ownership of large dbt projects </li>
                                 <li> Modeling for performance: building tables incrementally </li>
                                 <li> Using Jinja and macros to create dynamic, DRY data models </li>
@@ -144,7 +144,7 @@ canvas {
                                 <li> A paired problemset everyday which students will present at the end of the day </li>
                                 <li> Access to presentations and a curated list of resources to further learnings</li>
                             <h4>After:</h4>
-                                <li>A cohort of peers to converse and network with</li>
+                                <li>A cohort of peers network with and learn from</li>
                                 <li>Two weeks post-program to ask your instructors for support</li>
                                 <li>A verified dbt Learn certificate</li>
 					</div>
@@ -163,7 +163,7 @@ canvas {
             <div class='col-md-6 col-md-offset-3'>
                 <form action="https://formspree.io/erica@fishtownanalytics.com" method="POST" />
                 <div class="text-contain text-center">
-                    <h3 id="interest" class="h2">Interest Form</h3>
+                    <h3 id="interest" class="h2">Interested in attending?</h3>
                 </div>
                     <div class='card'>
                         <div class='card-body card-form'>
@@ -207,7 +207,7 @@ canvas {
                                 </div>
                                 <div class="card-formrow">
                                     <div class="card-control condensed">
-                                        <label class="form-control">Interested Seats</label>
+                                        <label class="form-control">Attendees</label>
                                     </div>
                                     <div class="select">
                                     	<select class="form-control">
@@ -224,7 +224,7 @@ canvas {
                                         <label class="form-control">Location Preferences</label>
                                     </div>
                                     <div class="card-control">
-                                            <textarea class='form-control' id="location" name="location" placeholder="e.g. Philadelphia, USA (west coast), Europe, etc."></textarea>
+                                            <input class='form-control' id="location" name="location" placeholder="e.g. Philadelphia, USA (west coast), Europe, etc.">
                                     </div>
                                 </div>
                                 <div class="card-formrow">
