fix form input for sessions and attendees

--- a/_content/index.html
+++ b/_content/index.html
@@ -144,7 +144,7 @@ canvas {
                                 <li> A paired problemset everyday which students will present at the end of the day </li>
                                 <li> Access to presentations and a curated list of resources to further learnings</li>
                             <h4>After:</h4>
-                                <li>A cohort of peers network with and learn from</li>
+                                <li>A cohort of peers to network with and learn from</li>
                                 <li>Two weeks post-program to ask your instructors for support</li>
                                 <li>A verified dbt Learn certificate</li>
 					</div>
@@ -196,7 +196,7 @@ canvas {
                                         <label class="form-control">Session Preference</label>
                                     </div>
                                     <div class="select">
-                                    	<select class="form-control">
+                                    	<select class="form-control" id="session" name="session">
                                     		<option>Fall 2019</option>
                                     		<option>Winter 2020</option>
                                     		<option>Spring 2020</option>
@@ -210,7 +210,7 @@ canvas {
                                         <label class="form-control">Attendees</label>
                                     </div>
                                     <div class="select">
-                                    	<select class="form-control">
+                                    	<select class="form-control" id="attendees" name="attendees">
                                             <option>1</option>
                                     		<option>2</option>
                                     		<option>3</option>
