made content updates

--- a/_content/index.html
+++ b/_content/index.html
@@ -35,8 +35,8 @@ canvas {
 			<div class="row">
 				<div class="col-lg-8">
 					<div class="text-contain">
-						<h1 class="h0">Beyond analytics</h1>
-                        <p class="text-large">dbt learn is an in-person training program designed to <br> empower analysts.</p>
+						<h1 class="h0">Learn analytics engineering with dbt</h1>
+                        <p class="text-large">dbt learn is an in person training program designed to <br> empower analysts.</p>
 					</div>
 				</div>
 				<div class="col-lg-4" style="z-index: 10">
@@ -72,12 +72,7 @@ canvas {
 					<div class="text-contain">
 						<h3 id="about" class="h2">About dbt learn</h3>
 						<p>
-                            dbt learn is an in-person training program designed to empower analysts.
-                            The only technical requirement needed is a practical knowledge of SQL, leave the rest to us!
-                            Taught by the Fishtown Analytics team, analysts will learn SQL essentials and the in's and out's
-                                of dbt through real-world applications.
-                            Analysts should walk away with a deeper understanding of how to approach, model, and optimize
-                                data through dbt.
+                            Analytics engineering is the data transformation work that happens between loading data into your warehouse and analyzing it. At dbt Learn, the Fishtown Analytics team will teach analysts how to use dbt to manage that workflow. The only technical requirement needed for dbt Learn is a practical knowledge of SQL and a willingness to learn Bash, Git, and version control. Attendees will learn about:
                         </p>
 						<ul class="list-icons list-cols text-med text-heading text-left">
 							{% assign checks = 'Data Warehouses; Automated Testing; Modeling Strategies; Performance Optimization; Writing DRY code; and more!' | split: ';' %}
