--- a/_content/index.html
+++ b/_content/index.html
@@ -36,7 +36,7 @@ canvas {
 				<div class="col-lg-8">
 					<div class="text-contain">
 						<h1 class="h0">Learn analytics engineering with dbt</h1>
-                        <p class="text-large">dbt learn is an in person training program designed to <br> empower analysts.</p>
+                        <p class="text-large">A two-day, in-person training program that teaches analysts the tools and knowledge needed to own the entire analytics engineering workflow.</p>
 					</div>
 				</div>
 				<div class="col-lg-4" style="z-index: 10">
