--- a/_content/index.html
+++ b/_content/index.html
@@ -142,6 +142,16 @@ canvas {
                                 <li>A cohort of peers to network with and learn from</li>
                                 <li>Two weeks post-program to ask your instructors for support</li>
                                 <li>A verified dbt Learn certificate</li>
+                            <div class="text-contain text-center">
+                            <br>
+                        <p><a href="https://www.eventbrite.com/e/dbt-learn-june-2019-tickets-60106821120" class="btn btn-primary btn-lg arrow-right">Register now</a></p>
+				            </div>
+   				</div>
+   			</div>
+   		</div>
+   	</div>
+   </div>
+
 					</div>
 				</div>
 			</div>
@@ -158,7 +168,7 @@ canvas {
             <div class='col-md-6 col-md-offset-3'>
                 <form action="https://formspree.io/erica@fishtownanalytics.com" method="POST" />
                 <div class="text-contain text-center">
-                    <h3 id="interest" class="h2">Interested in attending?</h3>
+                    <h3 id="interest" class="h2">Interested in attending a future session?</h3>
                 </div>
                     <div class='card'>
                         <div class='card-body card-form'>
