--- a/_content/index.html
+++ b/_content/index.html
@@ -2,6 +2,7 @@
 title: dbt learn
 permalink: /
 render_chart: true
+event_link: https://www.eventbrite.com/e/dbt-learn-october-2019-tickets-70286882959
 agenda:
   - activities:
       - dbt fundamentals
@@ -42,7 +43,7 @@ canvas {
 				<div class="col-lg-4" style="z-index: 10">
 					<div class="text-contain">
 						<h1 class="h0">&nbsp;</h1>
-                        <a href="https://www.eventbrite.com/e/dbt-learn-june-2019-tickets-60106821120" class="btn btn-primary btn-lg arrow-right">Register now</a>
+                        <a target="_blank" href="{{ page.event_link }}" class="btn btn-primary btn-lg arrow-right">Register now</a>
                     </div>
                 </div>
 			</div>
@@ -144,7 +145,7 @@ canvas {
                                 <li>A verified dbt Learn certificate</li>
                             <div class="text-contain text-center">
                             <br>
-                        <p><a href="https://www.eventbrite.com/e/dbt-learn-october-2019-tickets-70286882959" class="btn btn-primary btn-lg arrow-right">Register now</a></p>
+                        <p><a target="_blank" href="{{ page.event_link }}" class="btn btn-primary btn-lg arrow-right">Register now</a></p>
 				            </div>
    				</div>
    			</div>
