--- a/_content/index.html
+++ b/_content/index.html
@@ -43,7 +43,8 @@ canvas {
 				<div class="col-lg-4" style="z-index: 10">
 					<div class="text-contain">
 						<h1 class="h0">&nbsp;</h1>
-                        <a target="_blank" href="{{ page.event_link }}" class="btn btn-primary btn-lg arrow-right">View upcoming events now</a>
+                        <a target="_blank" href="{{ page.event_link }}" class="btn btn-primary btn-lg arrow-right">View upcoming events
+                        </a>
                     </div>
                 </div>
 			</div>
@@ -145,7 +146,7 @@ canvas {
                                 <li>A verified dbt Learn certificate</li>
                             <div class="text-contain text-center">
                             <br>
-                        <p><a target="_blank" href="{{ page.event_link }}" class="btn btn-primary btn-lg arrow-right">View upcoming events now</a></p>
+                        <p><a target="_blank" href="{{ page.event_link }}" class="btn btn-primary btn-lg arrow-right">View upcoming events</a></p>
 				            </div>
    				</div>
    			</div>
