cta points to events.getdbt.com

--- a/_content/index.html
+++ b/_content/index.html
@@ -2,7 +2,7 @@
 title: dbt learn
 permalink: /
 render_chart: true
-event_link: https://www.tickettailor.com/events/fishtownanalytics/
+event_link: https://events.getdbt.com/
 agenda:
   - activities:
       - dbt fundamentals
