Oneline the activity list. Edits

--- a/_content/index.html
+++ b/_content/index.html
@@ -20,9 +20,9 @@ agenda:
       - Package management
       - Understanding databases
       - Optimizing queries
-      - Materializations + incremental models
+      - Incremental models
       - End-to-end analytics
-      - Design patterns
+      - Patterns + techniques
 ---
 
 <style>
