--- a/_content/index.html
+++ b/_content/index.html
@@ -171,82 +171,7 @@ canvas {
                 <form action="https://formspree.io/janessa@fishtownanalytics.com" method="POST" />
                 <div class="text-contain text-center">
                     <h3 id="interest" class="h2">Interested in attending a future session?</h3>
-                </div>
-                    <div class='card'>
-                        <div class='card-body card-form'>
-                                <div class="card-formrow">
-                                    <div class="card-control condensed">
-                                        <label class="form-control">Your Name</label>
-                                    </div>
-                                    <div class="card-control">
-                                        <input class='form-control' type="text" name="name" placeholder="Kiki Ogino" />
-                                    </div>
-                                </div>
-                                <div class="card-formrow">
-                                    <div class="card-control condensed">
-                                        <label class="form-control">Your Email</label>
-                                    </div>
-                                    <div class="card-control">
-                                        <input class='form-control' type="text" name="email" placeholder="kiki@breadshop.com" />
-                                    </div>
-                                </div>
-                                <div class="card-formrow">
-                                    <div class="card-control condensed">
-                                        <label class="form-control">Your Company</label>
-                                    </div>
-                                    <div class="card-control">
-                                        <input class='form-control' type="text" name="company" placeholder="Bread Shop" />
-                                    </div>
-                                </div>
-                                <div class="card-formrow">
-                                    <div class="card-control condensed">
-                                        <label class="form-control">Session Preference</label>
-                                    </div>
-                                    <div class="select">
-                                    	<select class="form-control" id="session" name="session">
-                                    		<option>Fall 2019</option>
-                                    		<option>Winter 2020</option>
-                                    		<option>Spring 2020</option>
-                                    		<option>Summer 2020</option>
-                                    		<option>Fall 2020</option>
-                                    	</select>
-                                    </div>
-                                </div>
-                                <div class="card-formrow">
-                                    <div class="card-control condensed">
-                                        <label class="form-control">Attendees</label>
-                                    </div>
-                                    <div class="select">
-                                    	<select class="form-control" id="attendees" name="attendees">
-                                            <option>1</option>
-                                    		<option>2</option>
-                                    		<option>3</option>
-                                    		<option>4</option>
-                                    		<option>5+</option>
-                                    	</select>
-                                    </div>
-                                </div>
-                                <div class="card-formrow">
-                                    <div class="card-control condensed">
-                                        <label class="form-control">Location Preferences</label>
-                                    </div>
-                                    <div class="card-control">
-                                            <input class='form-control' id="location" name="location" placeholder="e.g. Philadelphia, USA (west coast), Europe, etc.">
-                                    </div>
-                                </div>
-                                <div class="card-formrow">
-                                    <div class="card-control condensed">
-                                        <label class="form-control">Other Notes</label>
-                                    </div>
-                                    <div class="card-control">
-                                        <textarea class='form-control' id="other" name="other" placeholder="Additional information or questions"></textarea>
-                                    </div>
-                                </div>
-                        </div>
-                    </div>
-                    <p class="btn-inliner">
-                        <center>
-                           <button type="submit" class="btn btn-primary">Let us know!</button>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSexP5BzoxwVoD8Sodppz7mojLTFoN8x9AVJ6KtPO33a8qC3vQ/viewform?embedded=true" width="640" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                         </center>
                     </p>
                 </form>
