--- a/_content/index.html
+++ b/_content/index.html
@@ -162,7 +162,7 @@ canvas {
 	<div class="section">
         <div class='row'>
             <div class='col-md-6 col-md-offset-3'>
-                <form action="https://formspree.io/janessa@fishtownanalytics.com" method="POST" />
+                <form action="https://formspree.io/h8qf9swk@robot.zapier.com" method="POST" />
                 <div class="text-contain text-center">
                     <h3 id="interest" class="h2">Interested in attending a future session?</h3>
                 </div>
