First attempt at FAQ

--- a/_content/index.html
+++ b/_content/index.html
@@ -147,12 +147,6 @@ canvas {
    		</div>
    	</div>
    </div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 </div>
 
 <div class="bg-silver-light">
@@ -242,6 +236,33 @@ canvas {
                         </center>
                     </p>
                 </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="bg-white">
+	<div class="section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="text-contain">
+						<center><h3 id="faq" class="h2">FAQ</h3></center>
+						<p>
+                            <h5>Is there a free online version?</h5>
+                                <p> We're really interested in making this happen! It's still a ways away.
+                                In the meantime, we're dedicated to making in-person Learn the best it can possibly be.</p>
+                            <h5>Do you offer alternate pricing?</h5>
+                                <p> We are committed to making best-in-class analytics tools, resources, and know-how accessible
+                                    to all. We also understand that the costs of attending an in-person event can be prohibitive.
+                                    If you work for a nonprofit or in the public sector, or if you are a member of a
+                                    community that is historically marginalized or underrpresented in tech, we would love to have you. 
+                                    Send us a message at <a href="mailto:learn@getdbt.com">learn@getdbt.com</a>.</p>
+                            <h5>Is it possible to see a course syllabus ahead of time?</h5>
+                                <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed 
+                                    agenda a few weeks before each session. You can see <a href="#agenda">above</a> some topic areas we always cover.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
