Better About section while we're here

--- a/_content/index.html
+++ b/_content/index.html
@@ -74,9 +74,11 @@ canvas {
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="text-contain">
-						<h3 id="about" class="h2">About dbt learn</h3>
+						<h3 id="about" class="h2">About dbt Learn</h3>
 						<p>
-                            Analytics engineering is the data transformation work that happens between loading data into your warehouse and analyzing it. At dbt Learn, the Fishtown Analytics team will teach analysts how to use dbt to manage that workflow. The only technical prerequisite for dbt Learn is a working knowledge of SQL. Prior familiarity with the command line and version control is helpful but not necessary. Attendees will learn about:
+                            <a href="https://blog.getdbt.com/what-is-an-analytics-engineer/">Analytics engineering</a> is the data transformation work that happens between loading data 
+                            into your warehouse and analyzing it. At dbt Learn, the Fishtown Analytics team will teach analysts how to use dbt to manage that workflow.
+                            Attendees will learn about:
                         </p>
 						<ul class="list-icons list-cols text-med text-heading text-left">
 							{% assign checks = 'Data Warehouses; Automated Testing; Modeling Strategies; Performance Optimization; Writing DRY code; and more!' | split: ';' %}
@@ -84,6 +86,7 @@ canvas {
 								<li><span class="arrow-check text-red text-large list-icon"></span> {{check}}</li>
 							{% endfor %}
 						</ul>
+                        <p>The only technical prerequisite is a working knowledge of SQL. Prior familiarity with the command line and version control is helpful but not necessary.</p>
 					</div>
 				</div>
 			</div>
