--- a/_content/index.html
+++ b/_content/index.html
@@ -255,15 +255,14 @@ canvas {
                             <h5>Is there a free online version?</h5>
                                 <p> We're really interested in making this happen! It's still a ways away.
                                 In the meantime, we're dedicated to making in-person Learn the best it can possibly be.</p>
-                            <h5>Do you offer alternate pricing?</h5>
-                                <p> We are committed to making best-in-class analytics tools, resources, and know-how accessible
-                                    to all. We also understand that the costs of attending an in-person event can be prohibitive.
-                                    If you work for a nonprofit or in the public sector, or if you are a member of a
-                                    community that is historically marginalized or underrpresented in tech, we would love to have you. 
-                                    Send us a message at <a href="mailto:learn@getdbt.com">learn@getdbt.com</a>.</p>
                             <h5>Is it possible to see a course syllabus ahead of time?</h5>
                                 <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed 
                                     agenda a few weeks before each session. You can see <a href="#agenda">above</a> some topic areas we always cover.</p>
+                            <h5>The cost of the event is prohibitive for me, is there any flexibility on the price?</h5>
+                                <p> We want dbt to be as accessible to as many people as possible. If you work for a non-profit, 
+                                    the public sector, or are member of a community that is historically underrepresented in 
+                                    tech – send us a message at <a href="mailto:learn@getdbt.com">learn@getdbt.com</a>. We would love to talk about what it will 
+                                    take to get you to the event.</p>
                     </div>
                 </div>
             </div>
