Add 107 sources//docs. To be split later

--- a/_content/lessons/106.html
+++ b/_content/lessons/106.html
@@ -1,4 +1,20 @@
+---
+layout: presentation
+title: Testing & CI
+lesson: 107-1
+estimated_teaching_time: 30
+teaching_method: live demo + slides. Questions encouraged.
+working_session: true
+---
+
 testing/ci
 - we added tests but when do we run them?
 
 - questions?
+
+???
+Note to teacher:
+- The following several presentations 
+(Testing, Sources, Docs, Debugging Models, and Opening a PR)
+are thin conceptual overviews that should dovetail naturally with
+the group's working sessions.
